--- a/frontend/templates/feeling.html
+++ b/frontend/templates/feeling.html
@@ -68,7 +68,7 @@ function toggleGenre(name, id)
 {
 	if(containsGenre(id))
 	{
-		document.getElementById(id).style.backgroundColor = '#FF9';
+		document.getElementById(id).style.backgroundColor = '#9CC';
 		removeGenre(id);
 	} else {
 		document.getElementById(id).style.backgroundColor = '#FF0';
