--- a/frontend/templates/header.html
+++ b/frontend/templates/header.html
@@ -17,10 +17,7 @@
 
 <body bgcolor='#000000' rightmargin="50 px" leftmargin="50px" topmargin="10px">
 <div class=page>
-<div style="text-align:left; margin-left:850px; font-size:12px">
- Hello Jenny &nbsp; &nbsp; <img src="{{ url_for('static', filename='img/users/jenny.jpg') }}" width="70" height="70" 
-       			 align="baseline" style="vertical-align:text-bottom"/>
-</div>
+
 
      <img src="{{ url_for('static', filename='img/title.png') }}" width="350" height="100" 
        			onClick="parent.location='/watchbox/stream'" align="baseline" style="vertical-align:text-bottom"/>
@@ -31,6 +28,10 @@
       <a href="/friends" class="header"> Watch with Friends</a>  &nbsp; &nbsp; | &nbsp;  &nbsp;
       <a href="/feeling" class="header"> I'm Feeling  </a> &nbsp; &nbsp;  &nbsp; &nbsp;
     
+   <!-- <div style="text-align:left; margin-left:850px; font-size:12px"> -->
+&nbsp; &nbsp;  <img src="{{ url_for('static', filename='img/users/jenny.jpg') }}" width="50" height="50" 
+       			 align="baseline" style="vertical-align:text-bottom"/>
+<!--</div>-->
       
                 <!--
      <img src="static/img/browse_btn.png" width="200" height="50" 
